--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -21,13 +21,14 @@ nav li {
   font-size: 1.5rem;
   }
 
-  /**/
+  /*hover visitado*/
 a,
 a:visited {
   text-decoration: none;
   color: #33354b;
 }
 
+/*hover*/
 a:hover {
   color: #ffa400;
   /*text-shadow: 0.125rem 0.125rem 0.188rem #0ef4a0;  si blur=> valores chiquitos*/
@@ -208,12 +209,12 @@ p {
 
 .submit:hover {
   text-decoration: none;
-  color: #33354b;
+  color: #ffffff;
 }
 
 .submit:visited {
   text-decoration: none;
-  color: #33354b;
+  color: #ffffff;
 }
 /*Esto va a funcionar cuando conecte con php el formulario de contacto?*/
 
@@ -321,17 +322,20 @@ h6 {
 /*fin de Sección de reviews*/
 
 /*SECCIÓN CALL TO ACTION*/
+
 .call-to-action {
   margin-top: 1rem;
   background-color: #5296e7;
   height:15rem;
 }
 
+/*botón del formulario de contacto*/
 .submit { 
   text-align: center; 
   justify-content: center;
 }
 
+/*texto enfocate en tus pacientes*/
 .pacientes {
   font-size: 4rem;
   font-weight: 900;
@@ -347,6 +351,7 @@ h6 {
   color: #33354b;
 }
 
+/*Titulo de preguntas frecuentes*/
 .titulo-faq {
   text-align: center;
   margin-bottom: 1rem; 
@@ -355,13 +360,14 @@ h6 {
   justify-items: center;
 }
 
+
 .faq ul { 
   width:100%; 
   display: inline-block;
-  justify-content: center;
- 
+  justify-content: center; 
 }
 
+/*elementos de preguntas frecuentes*/
 .faq ul li {
   width: 100%;
   position: relative;  
@@ -386,11 +392,7 @@ h6 {
   width: 35rem;  
   padding-top: 1rem 0 0 1rem;
   font-size: 1.4rem; 
-  
-}
-
-.somos p {
-  font-size: smaller;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .quienes-somos h4 {
@@ -401,9 +403,12 @@ h6 {
   padding-left: 1rem;
 }
 
+b{
+  font-weight:900;
+}
 /*fin subpágina quienes somos*/
 
-/*inicio subpagina login*/
+/********************INICIO PÁGINA LOGIN*********************/
 
 .login-container {
   display: flex;
@@ -441,11 +446,13 @@ h6 {
   background-color: #433543;
 }
 
+/********************FIN PÁGINA LOGIN*********************/
 
 
-/*fin subpagina login*/
 
-/*Inicio pagina de registro*/
+/********************INICIO PÁGINA REGISTRO*********************/
+
+/*FORMULARIO DE REGISTRO*/
 .form-register{
   background-color: #a7d9f0;
   width: 35rem;
@@ -456,6 +463,7 @@ h6 {
   justify-content:right;
 font-family: roboto, "Helvetica Neue",
 }
+
 
 .main-register{
   height: 78vh;
@@ -559,28 +567,62 @@ margin:0 auto;
 
 
 /*PÁGINA DE AGRADECIMENTO*/
-.gracias{ /*contenedor página de agradecimiento*/
-  width:100%;
-  height: 78vh;
-  background-color: #5383eb;
-  display:inline-block;
-  justify-content: center;
-  margin: 0 auto;
+
+/*contenedor página de agradecimiento*/
+.agradecimiento{
+  color:#5383eb;
+  font-size: 4rem;
+  display: inline-block;
+ justify-content: center;
+ width: 100%;
+ height: 78vh;
+ margin: 0 auto;
+  }
+
+/*contenedor del bloque de texto*/
+  .texto-agradecimiento{
+    margin-top: 3rem;
+    text-align: center;
+    }
+
+/*Texto que tiene la palabra gracias*/
+.gracias{ 
+  width:35rem; 
+   background-color: #5383eb;
+   margin: 0 auto;
+   align-self: center;
+   font-size: 5rem;
+   font-weight: 900;
+  }
+
+
+.shaking-hands{
+  width:5rem;/*el width de 100x ciento no sirve para alinear contendio porque el espacio de la imagen ocupa el 100 del dom entonces no se centra*/
+/**foto de apretón de manos*/
+margin:0 auto;
+margin-top: 4rem;
 }
 
+/*grid para servicios*/
 
- .agradecimiento{
- color:#ffffff;
- font-size: 3rem;
- 
- }
+.wrapper {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+  display: grid;
+  grid-template-rows: repeat(3, auto); /**cantidad de columnas de elementos, tamaño /
+  grid-gap: 1rem; /*espaciados entre elementos*/
+  grid-auto-flow: column;
+  grid-auto-columns: 33% 33% 33%;
+  text-align: center;
+  border-color: #27325E;
+  height:100%;
+  }
 
- .img-agradecimiento{
-  background-color: #5296e7;
-  size:50%;
- }
+.services-main{
+  height: 70vh;
+}
 
-
-
-
-
+.historial_medico{
+  height:3rem;
+  width: 3rem;
+}
