--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,9 +6,12 @@
   padding: 0%;
 }
 
+
+
 /****NAVBAR***/
 nav {
   display: flex;
+  justify-content: space-between;
   height: 5rem;
   padding-top: 0.5em;
  
@@ -20,8 +23,9 @@ nav li {
   margin-top: 1.5rem;
   margin-right: 2rem;
   font-size: 1.5rem;
-  color: #27325E;
+  
 }
+
 
 
 /************ETIQUETA a CON HOVER *****************/
@@ -45,12 +49,13 @@ a:visited {
 /********ENCABEZADO PRINCIPAL********/
 
 h1 {
-  font-size: 3.5rem;
+  font-size: 3rem;
   font-weight: 600;
   color: #27325E;
   margin-top: 1rem;
   font-weight: bold;
   line-height: 3rem;
+  text-align: left;
 }
 
 .pages {
@@ -70,12 +75,12 @@ ul {
 li {
   font-size: 1.2rem;
   margin-top: 1rem;
-
+  color: #27325E;
 }
 
 /**********************BOTÓN DEL LOGIN******************************/
 #login {
-  margin-top: 1rem;
+  margin-top: 1.5rem;
   background-color: #ffa400;
   color: #ffffff;
   margin-right: 5rem;
@@ -92,7 +97,7 @@ button {
   height: 2.5rem;
   border-radius: 2rem;
   font-size: 1.3rem;
-  color: #ffffff;
+  color: #fff;
   background-color: #ffa400;
   border: none;
 }
@@ -101,7 +106,6 @@ button {
 /******************PARA QUE TOME TODA EL AREA DEL BOTÓN************************/
 button a {
   display: block;
-  height: 80%;
   position: relative;
 }
 
@@ -123,14 +127,14 @@ p {
 
 section {
   height: 30rem;
-  padding-left: 5rem;
-  padding-right: 5rem;
+ 
 }
 
 .banner {
   display: flex;
   justify-content: space-between;
-  margin-top: 3rem;
+  margin:5rem;
+  
 }
 
 
@@ -138,6 +142,7 @@ section {
   width: 32%;
   height: 25rem;
   margin-top: 1rem;
+  
 }
 
 
@@ -155,7 +160,7 @@ h2 {
 
 
 /*chamuyo marketinero*/
-p {
+.sistema {
   font-weight: bold;
   color: #33354b;
   font-size: 1.8rem;
@@ -218,7 +223,7 @@ p {
   border-radius: 2rem;
   font-size: 1.3rem;
   border: none;
-  position: relative;
+  position: relative; 
   /*posicion relativa a su contenedor*/
 }
 
@@ -321,7 +326,7 @@ h4 {
 /*ul que contiene cada elemento */
 .comentarios {
   height: fit-content;
-  margin: 1rem 0 0 0;
+  margin: 1rem;
   font-size: 1.2rem;
 }
 
@@ -332,7 +337,7 @@ h4 {
 }
 
 .card {
-  margin: 1rem 0;
+  margin: 3rem;
 }
 
 /*nombre especialidad y estrellas*/
@@ -359,6 +364,7 @@ h5 {
 h6 {
   font-size: medium;
 }
+
 
 /*fin de Sección de reviews*/
 
@@ -403,11 +409,21 @@ h6 {
   justify-items: center;
 }
 
+.faq-container {
+  max-width: 600px;
+  margin: 50px auto;
+}
+
+.faq-item {
+  margin-bottom: 15px;
+}
+
+
 
 .faq ul {
   width: 100%;
   display: inline-block;
-  justify-content: center;
+ 
 }
 
 /*elementos de preguntas frecuentes*/
@@ -415,8 +431,9 @@ h6 {
   width: 100%;
   position: relative;
   float: none;
-  text-align: center;
-}
+  text-align:center;
+  justify-content:left;
+}*/
 
 /*fin preguntas frecuentes*/
 
@@ -428,6 +445,7 @@ h6 {
   height: 68vh;
   margin-top: 6rem;
 }
+
 
 .somos {
   display: inline-block;
@@ -458,7 +476,7 @@ b {
 /****************CONTENEDOR PRINCIPAL DE LA PÁGINA*******************/
 .main-login {
   display: flex;
-  justify-content: center;
+  justify-content:space-around;
   height: 79vh;
   top: 4rem;
 }
@@ -503,8 +521,7 @@ b {
 
 .imagen-login {
   height: 100%;
-  display: flex;
-
+  margin-left: 5rem;
 }
 
 .login {
@@ -512,12 +529,21 @@ b {
   display: flex;
   justify-content: right;
   background-color: #433543;
+ 
 }
-
 
 p .login {
   font-size: 0.5rem;
+
 }
+
+.olvidaste{
+  font-size: 1.2rem;
+  line-height: 2.5rem;
+  
+}
+
+
 
 /*************FIN PÁGINA LOGIN************/
 
@@ -553,33 +579,39 @@ p .login {
   color: #ffffff;
   font-size: 3rem;
   text-align: center;
-
+  
 }
 
 .form-register p {
   height: 2.5rem;
   text-align: center;
-  font-size: 1rem;
+  font-size: 1.5rem;
 }
 
 .form-register a {
-  color: #ffffff;
+  color: #f6eded;
   text-decoration: none;
 }
 
-.form-register a :hover {
-  color: #ffffff;
+.form-register a:hover {
+  color:#ffa400;
   text-decoration: underline;
 }
 
 
 .foto-registro {
   display: flex;
+  justify-content: space-around;
   justify-content: left;
   margin-top: 1.5rem;
-  margin-left: 4.5rem;
+  margin-left: 6.5rem;
   width: 50rem;
 }
+
+main .registrado{
+  font-size: 1.2rem;
+}
+
 
 /***************footer todas las páginas*******************/
 footer {
@@ -751,12 +783,12 @@ margin-top: 0.1rem;
 
 
 .habitos{
-  font-size: 1.1rem;
+  font-size: 1.3rem;
   width: auto;
   margin-top: 0.3rem;
  text-align: right;
  margin-right: 1rem;
-
+font-weight: 100;
   
  }
 
@@ -880,15 +912,13 @@ overflow: hidden;
 /*****MAIN*******/
 
 .main-dashboard {
-  width: 100%;
-  height: 100vh;
   flex-direction: column;
+  display: flex;
 }
 
 .contenedor-dasboard {
-  width: 100%;
   height: 100vh;
-  display: flex;
+ display: flex; 
 
 }
 
@@ -896,6 +926,7 @@ overflow: hidden;
 .principal-dashboard {
   width: 100%;
   height: 100%;
+  position: relative;
 }
 
 .bienvenida {
@@ -918,12 +949,13 @@ overflow: hidden;
 }
 
 .aside-dashboard {
-  max-width: 25%;
+  width: 25%;
   height: 100vh;
-  background-color: #27325E;
-  z-index: 10;
+  background-color:#27325E; 
   margin-left: -5rem;
-
+    float: left; 
+  text-align: center;
+  
 }
 
 .menu-vertical {
@@ -931,9 +963,9 @@ overflow: hidden;
   font-size: 1.5rem;
   font-weight: 500; 
   height: 70vh;
-  width: 100%;
-  justify-content: center;
+  width: 100%;   
   margin-top: 2rem;
+  text-align: center;
 }
 
 .menu-vertical ul {
@@ -943,7 +975,13 @@ overflow: hidden;
   justify-content: center;
 }
 
+.menu-vertical a{
+  color: #ffff;
+}
 
+.menu-vertical a:hover{
+  color: #ffa400;
+}
 
 .menu-vertical li {
   color: #ffff;
@@ -955,8 +993,7 @@ overflow: hidden;
 
 
 .medico-dash {
-  width: 60%;
-  z-index: index 1;
+  width: 60%;  
   margin: 0 auto;
   height: auto;
 }
@@ -972,6 +1009,10 @@ overflow: hidden;
   color: #FFFFFF;
   text-decoration: underline;
   margin: 0 auto;
+}
+
+.especialidad:hover{
+  color: #ffa400;
 }
 
 
@@ -1003,17 +1044,17 @@ overflow: hidden;
 /*****************contenedor general del calendario***********************/
 .calendario-container {
   background-color: #a889a8;
-  width: 70%;
-  display:inline-block;
-  justify-content: center;
-  margin: 0 auto;
+  width: 100%;
+  height: 50%;
+  position: relative;
+ 
 }
 
 /*****************contenedor general del calendario***********************/
-.calendario {
- 
-  margin-right: 2rem;
-  margin: 0 auto;
+.calendario {  
+  margin: 0 right;
+  height: 50%;
+  position: relative;
 }
 
 /******contenedor superior calendario******/
@@ -1029,7 +1070,6 @@ overflow: hidden;
   width: 99.5%;
   height: 5rem;
   color: #e9e6df;
-  justify-content: center;
   margin-right: 2rem;
 }
 
@@ -1068,7 +1108,7 @@ th {
 
 tr {
   width: 100px;
-  height: 100px;
+  height: 50px;
   background: #ede8e8;
   max-width: 500px;
 }
@@ -1087,6 +1127,23 @@ table {
   font-weight: 900;
 }
 
-/**************************NOTICIAS*******************************/
+.principal{
+  width: 76%;
+  background-color: #ffa400;
+  float: left;
+ 
+}
+
+.info-medica{
+  background-color: #1e7dd1;
+  width:55%;
+}
 
 
+
+.info{
+  background-color: #1FBE92;
+  color:#2A4473; 
+  width: 60%;
+  text-align: center;
+}
